# UD-IArbre-Research

./: .gitignore  .gitmodules  Dockerfile  README.md
data-pipelines/: LICENSE.md  synthese.md
deliverables/: README.md
desealing/: .dockerignore  Dockerfile  README.md  beven_kirkby.py  casier.py  configtemplate.yaml  contexte_problematisation.md  docker-compose.yml  ibk_mnt_maps.py  infiltration_pentes_mnt_maps.py  las_processing.py  lecture.py  main.py  methodes.py  methods.py  requirements.txt  temp_capteurs_lyon.py  visualisation.py  visualization.py
shadow-modeling/: README.md
sunlight-shadow/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  (+1 more)
vegetalisation/code/: .dockerignore  Dockerfile  README.md  calculateVegetationFromLidar.py  confusionMatrix.py  docker-compose.yml  extract_nuage.py  flair_probs_reweight.py  fusionBetweenFlairAndLidar.py  fusion_flair.py  fusion_lidar_flair.py  fusion_nuage.py  lidarCorrection.py  ortho_extract.py  ortho_fusion.py  pyproject.toml  requirements-workflow.txt  run_workflow.py  workflow_utils.py
vegetalisation/code/configs/: config_zonal_detection.yaml  configs.yml
vegetalisation/code/configs/RGB50cm_Weights_modified/: config_zonal_detection.yaml  configs.yml
vegetalisation/code/configs/RGB50cm_Weights_more_modified/: configs.yml
vegetalisation/code/configs/baseline/: config_zonal_detection.yaml  configs.yml
vegetalisation/code/tests/: conftest.py  test_flair_probs_reweight.py  test_processing_logic.py  test_workflow_files.py  test_workflow_utils.py
(+47 files in other folders)
